[package]
name = "anyray"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.10.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
hmac = { version = "0.12.1", features = ["reset"] }
rand = "0.9.0"
serde = "1.0.217"
serde-encrypt = "0.7.0"
serde_derive = "1.0.217"
sha2 = "0.10.8"
