[package]
name = "anyray"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.10.0", features = ["serde"] }
chacha = "0.4.0"
chrono = { version = "0.4.39", features = ["serde"] }
hmac = { version = "0.12.1", features = ["reset"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
rmp-serde = "1.3.0"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_derive = "1.0.217"
sha2 = "0.10.8"
sm2 = { version = "0.13.3", features = ["dsa"] }
